// The cloud-broker interface. See go/broker-managed-fakes.

syntax = "proto3";

package google.emulators;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "BrokerProto";
option java_package = "com.google.emulators";

// The Broker service provides custom target (URL) resolution with the option
// to perform actions as side effects of resolution requests.
service Broker {
  // Creates a spec to resolve targets to specified emulator endpoints.
  // If a spec with this id already exists, returns ALREADY_EXISTS.
  rpc CreateEmulator(CreateEmulatorRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/emulators";
      body: "emulator";
    };
  };

  // Finds a spec, by id. Returns NOT_FOUND if the spec doesn't exist.
  rpc GetEmulator(EmulatorId) returns (Emulator) {
    option (google.api.http) = {
      get: "/v1/emulators/{emulator_id}";
    };
  };

  // Removes a spec, by id. Returns NOT_FOUND if the spec doesn't exist.
  rpc DeleteEmulator(EmulatorId) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/emulators/{emulator_id}";
    };
  };

  // Lists all specs.
  rpc ListEmulators(google.protobuf.Empty) returns (ListEmulatorsResponse) {
    option (google.api.http) = {
      get: "/v1/emulators";
    };
  };

  rpc StartEmulator(EmulatorId) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/emulators/{emulator_id}:start";
      body: "*";
    };
  };

  rpc StopEmulator(EmulatorId) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/emulators/{emulator_id}:stop"
    };
  };

  rpc CreateResolveRule(CreateResolveRuleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/resolve_rules";
      body: "rule";
    };
  };

  rpc GetResolveRule(ResolveRuleId) returns (ResolveRule) {
    option (google.api.http) = {
      get: "/v1/resolve_rules/{rule_id}";
    };
  };

  rpc UpdateResolveRule(ResolveRule) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/v1/resolve_rules/{rule_id}";
    };
  };

  rpc DeleteResolveRule(ResolveRuleId) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/resolve_rules/{rule_id}";
    };
  };

  rpc ListResolveRules(google.protobuf.Empty) returns (ListResolveRulesResponse) {
    option (google.api.http) = {
      get: "/v1/resolve_rules";
    };
  };

  // Resolves a target according to relevant specs. If no spec apply, the input
  // target is returned in the response.
  rpc Resolve(ResolveRequest) returns (ResolveResponse) {
    option (google.api.http) = {
      post: "/v1:resolve"
      body: "*"
    };
  };
}

message CommandLine {
  // The path to a binary. If specified as a relative path, it must be
  // relative to the current working directory of the broker process.
  // REQUIRED
  string path = 1;

  // The command line arguments to pass to the binary, in the order specified.
  repeated string args = 2;
}

// The emulator specs for resolving targets.
message Emulator {
  // A globally unique ID for this emulator. Consider using a simple, human-
  // readable prefix scheme, e.g. "google.pubsub".
  // REQUIRED
  string emulator_id = 1;

  // A command that launches a server which must be running in order for
  // targets matched by this spec to be meaningfully resolved. Ignored by
  // UpdateEmulatorSpec().
  // Required unless "resolved_target" is specified.
  // CONDITIONALLY REQUIRED
  CommandLine start_command = 2;

  // Whether this binary should be started on-demand, e.g. lazily. Defaults to
  // true.
  bool start_on_demand = 3;

  enum State {
    OFFLINE = 0;
    STARTING = 1;
    ONLINE = 2;
  }
  State state = 4;
}

message CreateEmulatorRequest {
  Emulator emulator = 1;
}

message EmulatorId {
  string emulator_id = 1;
}

message ListEmulatorsResponse {
  repeated Emulator emulators = 1;
}

message ResolveRule {
  string rule_id = 1;

  // A regular expression used to match target strings for this emulator.
  // Required for CreateEmulatorSpec(); ignored by UpdateEmulatorSpec().
  // CONDITIONALLY REQUIRED
  repeated string target_pattern = 2;

  // The target that is resolved to. Required unless "binary_spec" is set.
  // CONDITIONALLY REQUIRED
  string resolved_target = 3;

  // Optional.
  string emulator_id = 4;
}

message CreateResolveRuleRequest {
  ResolveRule rule = 1;
}

message ResolveRuleId {
  string rule_id = 1;
}

message ListResolveRulesResponse {
  repeated ResolveRule rules = 1;
}

message ResolveRequest {
  // The target to resolve. Optional if "id" is specified.
  // CONDITIONALLY REQUIRED
  string target = 1;
}

message ResolveResponse {
  string target = 1;
}

message PortRange {
  int32 begin = 1;  // Inclusive
  int32 end = 2;    // Exclusive; positive values larger than "begin" only
}

message BrokerConfig {
  // The ranges of free ports that the broker is allowed to choose from.
  // Ranges must be non-overlapping. If none are specified, the broker will
  // choose ports arbitrarily, which might cause conflicts with other programs.
  repeated PortRange port_ranges = 1;

  // The specs known by the broker at startup.
  repeated Emulator emulators = 2;

  repeated ResolveRule rules = 3;

  // The deadline for all emulators started by the broker to begin serving.
  google.protobuf.Duration default_emulator_start_deadline = 4;
}
